View Issue Details

IDProjectCategoryView StatusLast Update
0025933Open CASCADEOCCT:Visualizationpublic2015-05-14 15:31
ReportervpaAssigned Tobugmaster  
PrioritynormalSeverityminor 
Status closedResolutionfixed 
Product Version6.8.0 
Target Version6.9.0Fixed in Version6.9.0 
Summary0025933: Visualization - Forward AIS_InteractiveObject::Redisplay() execution to AIS_InteractiveContext
DescriptionTo avoid incorrect update of dependent structures after direct calls to AIS_InteractiveObject::Redisplay(), it is needed to change behavior of the method mentioned and forward its execution to AIS_InteractiveObject::Redisplay() one.
Steps To ReproduceNot required
TagsNo tags attached.
Test case numberNot needed

Relationships

related to 0024623 closedbugmaster Visualization - improve selection mechanism 

Activities

git

2015-03-13 18:49

administrator   ~0038356

Branch CR25933 has been created by vpa.

SHA-1: bd3554136c519be36b88d6effd762d488ea7c7b9


Detailed log of new commits:

Author: vpa
Date: Fri Mar 13 18:49:30 2015 +0300

    0025933: Visualization - Remove method Redisplay() from AIS_InteractiveObject
    
    All calls of AIS_InteractiveObject::Redisplay were replaced by AIS_InteractiveContext::Redisplay ones or
    correspondent updates of object

git

2015-03-13 18:53

administrator   ~0038357

Branch CR25933 has been updated forcibly by vpa.

SHA-1: 399b4d5670b6f4d177c5b8422be8af898ca79ae7

vpa

2015-03-13 18:55

developer   ~0038358

Dear Sergey,

the patch in branch CR25933 is ready to be reviewed.

abv

2015-03-13 18:56

manager   ~0038359

Would not it be convenient to keep Redisplay() in object, redirecting it to context? I imagine that I might need to do this if I have object only.

git

2015-03-13 19:40

administrator   ~0038362

Branch CR25933 has been updated forcibly by vpa.

SHA-1: 393091c3bdd06edff4194530a10f4e7ed384e81e

vpa

2015-03-13 19:42

developer   ~0038363

Dear Andrey,

the patch in branch CR25933 was updated according to your remark.

kgv

2015-03-13 21:51

developer   ~0038364

> Would not it be convenient to keep Redisplay() in object, redirecting it to context?
> I imagine that I might need to do this if I have object only.
This will be incorrect by design, because object might be displayed in several contexts. Although this is rarely happens.

san

2015-03-17 13:08

developer   ~0038424

Branch CR25933 reviewed without remarks, ready for testing.

git

2015-03-18 14:45

administrator   ~0038640

Branch CR25933 has been updated by mkv.

SHA-1: e5e39a762ca0f9ac40867dcb2d8ecd9c0e2198b4


Detailed log of new commits:

Author: mkv
Date: Wed Mar 18 14:45:18 2015 +0300

    Small correction of test case

mkv

2015-03-18 14:46

tester   ~0038641

Dear BugMaster,
Branch CR25933 from occt git-repository (and master from products git-repository) was compiled on Linux, MacOS and Windows platforms and tested on Release mode.
SHA-1: 393091c3bdd06edff4194530a10f4e7ed384e81e

Number of compiler warnings:

occt component :
Linux: 18 (18 on master)
Windows: 0 (0 on master)

products component :
Linux: 11 (11 on master)
Windows: 4 (4 on master)

Regressions/Differences:
No regressions/differences

Testing cases:
Not needed

Testing on Linux:
occt component :
Total MEMORY difference: 90159687 / 90114426
Total CPU difference: 58319.9200000002 / 58911.169999999984
products component :
Total MEMORY difference: 22959688 / 23045996
Total CPU difference: 15444.819999999982 / 16097.579999999978

Testing on Windows:
occt component :
Total MEMORY difference: 57858634 / 57860583
Total CPU difference: 50578.3125 / 54907.96875
products component :
Total MEMORY difference: 15053862 / 15056278
Total CPU difference: 16752.71875 / 16748.84375

There are no differences in images found by testdiff.

git

2015-04-09 09:49

administrator   ~0039447

Branch CR25933 has been deleted by kgv.

SHA-1: e5e39a762ca0f9ac40867dcb2d8ecd9c0e2198b4

Related Changesets

occt: master 36132a2e

2015-03-19 13:02:42

vpa


Committer: bugmaster Details Diff
0025933: Visualization - Forward AIS_InteractiveObject::Redisplay() execution to AIS_InteractiveContext

AIS_InteractiveObject::Redisplay now redirects the execution to interactive context;
All calls to AIS_InteractiveObject::Redisplay were replaced by AIS_InteractiveContext::Redisplay

Small correction of test case
Affected Issues
0025933
mod - src/AIS/AIS_InteractiveContext.cxx Diff File
mod - src/AIS/AIS_InteractiveObject.cdl Diff File
mod - src/AIS/AIS_InteractiveObject.cxx Diff File
mod - src/ViewerTest/ViewerTest.cxx Diff File
mod - src/ViewerTest/ViewerTest_ViewerCommands.cxx Diff File
mod - tests/bugs/fclasses/bug63 Diff File

Issue History

Date Modified Username Field Change
2015-03-13 16:56 vpa New Issue
2015-03-13 16:56 vpa Assigned To => vpa
2015-03-13 16:57 vpa Status new => assigned
2015-03-13 16:58 vpa Relationship added related to 0024623
2015-03-13 18:49 git Note Added: 0038356
2015-03-13 18:53 git Note Added: 0038357
2015-03-13 18:55 vpa Note Added: 0038358
2015-03-13 18:55 vpa Assigned To vpa => san
2015-03-13 18:55 vpa Status assigned => resolved
2015-03-13 18:56 abv Note Added: 0038359
2015-03-13 19:34 vpa Summary Visualization - Remove method Redisplay() from AIS_InteractiveObject => Visualization - Forward AIS_InteractiveObject::Redisplay() execution to AIS_InteractiveContext
2015-03-13 19:34 vpa Description Updated
2015-03-13 19:40 git Note Added: 0038362
2015-03-13 19:42 vpa Note Added: 0038363
2015-03-13 21:51 kgv Note Added: 0038364
2015-03-17 13:08 san Note Added: 0038424
2015-03-17 13:08 san Assigned To san => bugmaster
2015-03-17 13:08 san Status resolved => reviewed
2015-03-17 14:35 mkv Assigned To bugmaster => mkv
2015-03-18 14:45 git Note Added: 0038640
2015-03-18 14:46 mkv Note Added: 0038641
2015-03-18 14:46 mkv Assigned To mkv => bugmaster
2015-03-18 14:46 mkv Status reviewed => tested
2015-03-18 14:46 mkv Test case number => Not needed
2015-03-20 13:34 bugmaster Changeset attached => occt master 36132a2e
2015-03-20 13:34 bugmaster Status tested => verified
2015-03-20 13:34 bugmaster Resolution open => fixed
2015-04-09 09:49 git Note Added: 0039447
2015-05-14 15:28 aiv Status verified => closed
2015-05-14 15:31 aiv Fixed in Version => 6.9.0