0025933: Visualization - Forward AIS_InteractiveObject::Redisplay() execution to AIS_InteractiveContext

AIS_InteractiveObject::Redisplay now redirects the execution to interactive context;
All calls to AIS_InteractiveObject::Redisplay were replaced by AIS_InteractiveContext::Redisplay

Small correction of test case